--- a/_blog/bower.json
+++ b/_blog/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "",
+  "name": "_blog",
   "version": "0.0.0",
-  "homepage": "https://github.com/johnhenry/technique",
+  "homepage": "",
   "authors": [],
   "license": "MIT",
   "ignore": [
