--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build-todo-static": "node _client/build/_",
     "build-todo-server": "node _client/build/_.server",
     "build-blog": "node _blog/build/_",
+    "lint-client": "eslint _client/script/**",
+    "lint-server": "eslint server/**",
     "server": "node server/start",
     "postinstall": "npm run build-todo-static"
   },
@@ -14,9 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^5.8.21",
+    "babel-eslint": "^4.1.3",
     "babelify": "^6.1.3",
     "browserify": "^11.0.1",
     "cssnext": "^1.8.3",
+    "eslint": "^1.7.3",
     "fs-extra": "^0.23.1",
     "koa": "^0.21.0",
     "koa-json-body": "^4.0.0",
