--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "server-blog": "node server/start.dynamic",
     "postinstall": "npm run build-todo-static"
   },
+  "repository":"https://github.com/johnhenry/technique",
+  "engines": {
+    "node": "^5.0.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^6.0.3",
     "babel": "^5.8.21",
     "babel-eslint": "^4.1.3",
     "babelify": "^6.1.3",
     "browserify": "^11.0.1",
-    "cssnext": "^1.8.3",
+    "cssnano": "^3.3.2",
+    "cssnext": "^1.8.4",
     "eslint": "^1.7.3",
     "fs-extra": "^0.23.1",
     "koa": "^0.21.0",
@@ -32,9 +38,10 @@
     "minify": "^1.4.22",
     "minifyify": "^7.1.0",
     "path-to-regexp": "^1.2.1",
-    "postcss": "^4.1.16",
-    "postcss-import": "^6.2.0",
-    "postcss-nested": "^0.3.2",
+    "postcss": "^5.0.10",
+    "postcss-extend": "^1.0.1",
+    "postcss-import": "^7.1.0",
+    "postcss-nested": "^1.0.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "yaml-front-matter": "^3.2.3"
