--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^6.0.3",
-    "babel": "^5.8.21",
+    "babel": "^6.0.14",
+    "babel-core": "^6.0.14",
     "babel-eslint": "^4.1.3",
-    "babelify": "^6.1.3",
-    "browserify": "^11.0.1",
+    "babel-preset-es2015": "^6.0.14",
+    "babel-preset-react": "^6.0.14",
+    "babel-preset-stage-0": "^6.0.14",
+    "babel-preset-stage-3": "^6.0.14",
+    "babelify": "^7.1.0",
+    "browserify": "^12.0.1",
     "cssnano": "^3.3.2",
     "cssnext": "^1.8.4",
     "eslint": "^1.7.3",
