--- a/demos/todo/package.json
+++ b/demos/todo/package.json
@@ -8,6 +8,9 @@
     "build": "node ./node_modules/john-henrys-hammer",
     "build-static": "node ./node_modules/john-henrys-hammer --tag todo-static ",
     "build-server": "node ./node_modules/john-henrys-hammer --tag todo-server ",
+    "build-combined": "node ./node_modules/john-henrys-hammer --tag todo-combined ",
+    "build-testing": "node ./node_modules/john-henrys-hammer --tag testing --no-purge",
+    "build-testing2": "node ./node_modules/john-henrys-hammer --tag testing2 --no-purge",
     "start-server": "node ./server/start"
   },
   "author": "",
