--- a/demos/todo/package.json
+++ b/demos/todo/package.json
@@ -9,7 +9,7 @@
     "build-static": "node ./node_modules/john-henrys-hammer --tag static ",
     "build-async": "node ./node_modules/john-henrys-hammer --tag async ",
     "build-subscribable": "node ./node_modules/john-henrys-hammer --tag subscribable ",
-    "build-testing": "node ./node_modules/john-henrys-hammer --no-purge",
+    "build-testing": "node ./node_modules/john-henrys-hammer --tag js --tag static --no-purge ",
     "server-async": "node ./server/start-async",
     "server-subscribable": "node ./server/start-subscribable"
   },
@@ -25,6 +25,7 @@
     "koa-json-body": "^4.0.0",
     "koa-router": "^5.3.0",
     "koa-static": "^1.5.2",
+    "localforage": "^1.3.1",
     "nail-css-edge": "0.0.1",
     "nail-js-edge": "0.0.3",
     "nail-static-react": "0.0.3",
